(In Progress) #Task 4656 - New UI for My Account section

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -66,7 +66,8 @@
     <string name="confirmation_leave_share_folder" context="confirmation message before leaving an incoming shared folder">Si abandonas la carpeta, no podrás acceder a ella de nuevo</string>
     
     <string name="confirmation_alert" context="confirmation message before removing a file">Confirmación necesaria</string>
-        
+
+    <string name="delete_account" context="Button in My Account section where the user can delete permanently his account">Eliminar cuenta</string>
     <string name="action_logout" context="Button where the user can sign off or logout">Desconectar</string>
     <string name="action_add" context="Menu item">Subir</string>
     <string name="action_create_folder" context="Menu item">Nueva carpeta</string>
