--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -448,8 +448,8 @@
      <string name="overquota_alert_text" context="Dialod text overquota error">Operation not allowed, you will exceed the storage limit of your account. Do you want to upgrade your account?</string>
     
     <string name="op_not_allowed" context="Dialod text overquota error">Operation not allowed</string>
-    <string name="my_account_last_session" context="when did the last session happen">Last session:</string>
-    <string name="my_account_connections" context="header for the social connections, showing the number of contacts the user has">Connections:</string>
+    <string name="my_account_last_session" context="when did the last session happen">Last session</string>
+    <string name="my_account_connections" context="header for the social connections, showing the number of contacts the user has">Connections</string>
     
     <string name="my_account_changing_password" context="message displayed while the app is changing the password">Changing password</string>
     <string name="my_account_change_password_oldPassword" context="when changing the password, the first edittext is to enter the current password">Current password</string>
@@ -679,5 +679,16 @@
     <string name="my_account_pro1" context="Label in My Account section to show user account type">Pro I Account</string>
     <string name="my_account_pro2" context="Label in My Account section to show user account type">Pro II Account</string>
     <string name="my_account_pro3" context="Label in My Account section to show user account type">Pro III Account</string>
+
+    <string name="backup_title" context="Title of the screen to backup the master key">Backup your recovery key</string>
+    <string name="backup_subtitle" context="Subtitle of the screen to backup the master key">Your password unlocks your recovery key</string>
+
+    <string name="backup_first_paragraph" context="First paragraph of the screen to backup the master key">Your data is only readable through a chain of decryption operations that begins with your master encryption key, which we store encrypted with your password. This means that if you lose your password, your master key can no longer be decrypted, and you can no longer decrypt your data.</string>
+    <string name="backup_second_paragraph" context="Second paragraph of the screen to backup the master key">Exporting the master key and keeping it in a secure location enables you to set a new password without data loss.</string>
+    <string name="backup_third_paragraph" context="Third paragraph of the screen to backup the master key">An external attacker cannot gain access to your account with just your key. A password reset requires both the key and access to your e-mail.</string>
+    <string name="backup_action" context="Sentence to inform the user. the available actions in the screen to backup the master key">Copy the recovery key to clipboard or save it as text file</string>
+
+    <string name="save_action" context="Action of the button to save the master key as a text file">Save</string>
+    <string name="copy_MK_confirmation" context="Alert message when the master key has been successfully copied to the ClipBoard">The recovery has been successfully copied</string>
 
 </resources>
