--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -696,12 +696,18 @@
     <string name="general_positive_button" context="Positive button to perform a general action">YES</string>
     <string name="general_negative_button" context="Negative button to perform a general action">NO</string>
 
+    <string name="forgot_pass_menu" context="Option of the overflow menu to show the screen info to reset the password">Forgot password?</string>
     <string name="forgot_pass" context="Button in the Login screen to reset the password">Forgot your password?</string>
     <string name="forgot_pass_first_paragraph" context="First paragraph of the screen when the password has been forgotten">If you have a backup of your recovery crypto key, you can reset your password by selecting YES. No data will be lost.</string>
     <string name="forgot_pass_second_paragraph" context="Second paragraph of the screen when the password has been forgotten">You can still export your recovery key now if you have an active MEGA session in any other browser on this or any other computer. If you don\&apos;t, you can no longer decrypt your existing account, but you can start a new one under the same e-mail address by selecting NO.</string>
+    <string name="forgot_pass_second_paragraph_logged_in" context="Second paragraph of the screen when the password has been forgotten and the user is still logged in">If you don\&apos;t, you can still export your recovery key now in this MEGA session. Please, go back and backup your recovery key.</string>
+
     <string name="forgot_pass_action" context="Sentence to ask to the user if he has the master key in the screen when the password has been forgotten">Do you have a backup of your recovery key?</string>
 
     <string name="title_alert_reset_with_MK" context="Title of the alert message to ask for the link to reset the pass with the MK">Great!</string>
     <string name="edit_text_insert_mail" context="Hint of the text when the user can write his e-mail">email goes here</string>
     <string name="text_alert_reset_with_MK" context="Text of the alert message to ask for the link to reset the pass with the MK">Please enter you e-mail address below. You will receive a recovery link that will allow you to submit your recovery key and reset your password.</string>
+
+    <string name="edit_text_insert_mk" context="Hint of the text when the user can write his master key">recovery key goes here</string>
+
 </resources>
